# rustmusic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/SQL/: 202602270001_initialize.sql  202605010001_add_lyrics_table.sql
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/keys/: rustmusic.key.pub
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: audio_command.rs  device_command.rs  dlna_command.rs  library_command.rs  lyrics_command.rs  media_controls_command.rs  mod.rs  player_command.rs  playlist_command.rs  profil_command.rs  queue_command.rs  recent_command.rs  search_command.rs  settings_command.rs  system_command.rs  volume_command.rs  wasapi_command.rs
src-tauri/src/core/: audio_quality.rs  media_controls.rs  mod.rs  render_mode.rs  system_detect.rs
src-tauri/src/core/audio_analyser/: audio_analyser.rs
src-tauri/src/core/audio_decoder/: error.rs
src-tauri/src/core/audio_lyrics/: lrclib_client.rs  sidecar.rs
src-tauri/src/core/audio_manager/: audio_manager.rs
src-tauri/src/core/audio_player/: audio_output_wasapi.rs  audio_player.rs  audio_utils.rs  pipeline_info.rs
src-tauri/src/core/audio_resampler/: resampler.rs
src-tauri/src/core/dlna_server/: config.rs  error.rs  net.rs  server.rs  soap.rs  xml.rs
src-tauri/src/core/settings_manager/: settings_manager.rs
src-tauri/src/entity/: mod.rs
src-tauri/src/entity/artist/: artist.rs
src-tauri/src/entity/audio/: audio_file.rs  audio_tags.rs  file_tags_info.rs  mod.rs
src-tauri/src/entity/audio_lyrics/: lyrics.rs
src-tauri/src/entity/playlist/: mod.rs  playlist.rs  playlist_item.rs  track_liked.rs
src-tauri/src/entity/profil/: mod.rs  profil.rs
src-tauri/src/entity/queue/: mod.rs  queue_state.rs  queue_track.rs
src-tauri/src/entity/recent/: mod.rs  recent_file.rs
src-tauri/src/entity/search/: search_result.rs
src-tauri/src/helper/: mod.rs
src-tauri/src/helper/database/: sqlite.rs
src-tauri/src/helper/files/: reader.rs
src-tauri/src/helper/string/: string.rs
src-tauri/src/mapper/: mod.rs
src-tauri/src/mapper/playlist/: mod.rs
src-tauri/src/mapper/queue/: mod.rs  queue_state_view.rs
src-tauri/src/mapper/recent/: mod.rs  recent_file_list_view.rs
src-tauri/src/repository/: mod.rs
src-tauri/src/repository/artist/: artist_repository.rs  mod.rs
src-tauri/src/repository/audio_lyrics/: lyrics_repository.rs  mod.rs
src-tauri/src/repository/playlist/: mod.rs  playlist_item_repository.rs  playlist_repository.rs  track_liked_repository.rs
src-tauri/src/repository/profil/: mod.rs  profil_repository.rs
(+171 files in other folders)
