[package]
name = "rustmusic"
version = "0.1.7"
description = "Audiophile-grade desktop music player with native DSD playback, multichannel SACD support, DLNA server, synced lyrics, and OS media controls."
authors = ["LaRevueGeeK <contact@rustmusic.dev>"]
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://rustmusic.dev"
repository = "https://github.com/larevuegeek/rustmusic"
readme = "../README.md"
keywords = ["music-player", "dsd", "audiophile", "tauri", "hi-fi"]
categories = ["multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rustmusic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2.4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
cpal = "0.17.1"
symphonia = { version = "0.5.5", features = ["default", "mp3", "flac", "wav", "vorbis", "aac"] }
rubato = "2.0.0"
lazy_static = "1.5.0"
log = "0.4.27"
simplelog = "0.12"
rb = "0.4.1"
arrayvec = "0.7.6"
num-traits = "0.2.19"
anyhow = "1.0.100"
md5 = "0.8.0"
audioadapter-buffers = "3.0.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",      # Runtime async
    "sqlite",             # Driver SQLite
    "macros",             # Pour query!() macro
    "chrono"
] }
tokio = { version = "1.52.3", features = ["full"] }
dirs = "6.0.0"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
unidecode = "0.3.0"
chrono = { version = "0.4", features = ["serde"] }
ringbuf = "0.5.0"
regex = "1.12.3"
rayon = "1.12.0"
reqwest = { version = "0.13.3", features = ["json"] }
urlencoding = "2"
tauri-plugin-updater = "2.10.1"
image = "0.25.10"
fast_image_resize = { version = "6.0", default-features = false, features = ["image"] }
num_cpus = "1.17.0"
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.11", features = ["fs"] }
async-trait = "0.1"
souvlaki = "0.8"

[profile.release]
strip = false
lto = true
